--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="#">Home</a>
                 <a href="#About">About</a>
                 <a href="#services">Services</a>
-                <a href="#Contact">Contact</a>
+                <a class="Contact" href="#Contact">Contact</a>
             </div>
     </div>
         <div id="About">
